syntax = "proto3";

// protoc --go_out=plugins=grpc:. *.proto

package session;

message CreateSessionInfo {
  string ID = 1;
  string role = 2;
  string expires = 3;
  string cookie = 4;
}

message GetSessionInfo {
  string ID = 1;
  string role = 2;
  string expires = 3;
  bool ok = 4;
}

message Session {
  string id = 1;
  string class = 2;
}

message Cookie {
  string cookie = 1;
}

message Bool {
  bool ok = 1;
}

// grpc-сервис проверки авторизации
service Service {
	rpc CreateSession(Session) returns (CreateSessionInfo) {}
	rpc DeleteSession(Cookie) returns (Bool) {}
	rpc GetSession(Cookie) returns (GetSessionInfo) {}
}
